<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BerandaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tx_Beranda_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="Beranda"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/corousel_Beranda"
                android:layout_width="320dp"
                android:layout_height="160dp"
                android:layout_marginTop="20dp"
                app:iss_auto_cycle="true"
                app:iss_corner_radius="10"
                app:iss_delay="0"
                app:iss_period="1000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tx_Beranda_title" />

            <TextView
                android:id="@+id/tx_Beranda_updTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/update_kasus_covid"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/corousel_Beranda" />

            <Spinner
                android:id="@+id/spn_Beranda_Loc"
                android:layout_width="235dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/backgroundbutton"
                android:entries="@array/list_negara"
                app:layout_constraintRight_toLeftOf="@id/btn_pilih"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tx_Beranda_updTitle" />

            <Button
                android:id="@+id/btn_pilih"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/backgroundbutton"
                android:text="@string/pilih"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tx_Beranda_updTitle" />

            <androidx.cardview.widget.CardView
                android:id="@+id/crd_kasus"
                android:layout_width="320dp"
                android:layout_height="167dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="#6EB7FB"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spn_Beranda_Loc">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="11dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/grap_kasus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/crd_kasus_jumlah"
                            android:layout_width="140dp"
                            android:layout_height="68dp"
                            android:layout_marginEnd="22dp"
                            app:cardBackgroundColor="#FFB259"
                            app:cardCornerRadius="20dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="58dp"
                                android:layout_gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginBottom="9sp"
                                    android:text="@string/jumlah_kasus"
                                    android:textColor="@color/white"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/jumlahkasus_total"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/_0"
                                    android:textColor="@color/white"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/crd_kasus_sembuh"
                            android:layout_width="140dp"
                            android:layout_height="68dp"
                            app:cardBackgroundColor="#84FF59"
                            app:cardCornerRadius="20dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginBottom="9sp"
                                    android:text="@string/sembuh"
                                    android:textColor="@color/white"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/sembuh_total"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/_0"
                                    android:textColor="@color/white"
                                    android:textSize="14sp"
                                    android:textStyle="bold" />
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/crd_kasus_meninggal"
                        android:layout_width="140dp"
                        android:layout_height="68dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="9dp"
                        app:cardBackgroundColor="#FF7759"
                        app:cardCornerRadius="20dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="9sp"
                                android:text="@string/meninggal"
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/meninggal_total"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/_0"
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/web_kemenkes"
                android:layout_width="320dp"
                android:layout_height="104dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="#6EB7FB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crd_kasus">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="71dp"
                        android:layout_height="67dp"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/kemenkes_half" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/informasi_lengkap_covid_19"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_dukung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/didukung_oleh"
                android:textColor="#7E7E7E"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/web_kemenkes" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_dukung">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="28dp"
                    android:layout_marginRight="23dp"
                    android:src="@drawable/telu" />

                <ImageView
                    android:layout_width="57dp"
                    android:layout_height="28dp"
                    android:layout_marginRight="23dp"
                    android:src="@drawable/satgas_covid" />

                <ImageView
                    android:layout_width="63dp"
                    android:layout_height="28dp"
                    android:src="@drawable/kemenkes_full" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/BerandabottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fullBluePrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_bar" />
</androidx.constraintlayout.widget.ConstraintLayout>